first facebook vs reddit build, nav, columns

--- a/client/card.jade
+++ b/client/card.jade
@@ -6,16 +6,16 @@ template(name='post_card')
                 |!{embed}
         else if is_image
             a.view_post(href="/p/#{_id}" class=post_header_class)
-                img.ui.fluid.zoomer.image.toggle_view(src=data.url)
+                img.ui.fluid.image.toggle_view(src=data.url)
         else if watson.metadata.image
             img.ui.image.pointer.call_meta(src=watson.metadata.image)
         else if data.is_reddit_media_domain
             a.view_post(href="/p/#{_id}" class=post_header_class)
-                img.ui.fluid.image.pointer.zoomer(src=data.thumbnail)
+                img.ui.fluid.image.pointer(src=data.thumbnail)
                 // img.ui.centered.image.pointer.call_visual(src=data.url)
         else if has_thumbnail
             a.view_post(href="/p/#{_id}" class=post_header_class)
-                img.ui.fluid.image.pointer.zoomer(src=data.thumbnail)
+                img.ui.fluid.image.pointer(src=data.thumbnail)
         else if is_youtube
             // .ui.fluid.embed
             //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
@@ -27,10 +27,10 @@ template(name='post_card')
 
         // if image_link
         //     a(href="/p/#{_id}")
-        //         img.ui.zoomer.image(src=image_link)
+        //         img.ui.image(src=image_link)
         // if image_id
         //     a(href="/p/#{_id}")
-        //         img.ui.zoomer.image(src="{{c.url image_id }}" )
+        //         img.ui.image(src="{{c.url image_id }}" )
         // if youtube_id
         //     +youtube_view key='youtube_id' label='youtube id'
 
@@ -41,7 +41,7 @@ template(name='post_card')
             //     a.f12(href="/p/#{_id}")
             //         |!{data.selftext_html}
             // else if data.selftext
-            //     a.f12.zoomer(href="/p/#{_id}")
+            //     a.f12(href="/p/#{_id}")
             //         |!{data.selftext}
                     
             //     |!{description}
@@ -64,9 +64,9 @@ template(name='post_card')
             |{{ufrom data.created}}
             // if watson
             //     +doc_emotion_small
-            // i.thumbs.up.outline.grey.zoomer.link.icon.upvote
+            // i.thumbs.up.outline.grey.link.icon.upvote
             // |#{points}
-            // i.thumbs.down.outline.grey.zoomer.link.icon.downvote
+            // i.thumbs.down.outline.grey.link.icon.downvote
             // i.chat.outline.grey.icon
             // |#{comment_count}
             // +voting
