--- a/client/card.jade
+++ b/client/card.jade
@@ -1,5 +1,5 @@
 template(name='post_card')
-    .column.smallscrol(class=nightmode_class)
+    .column.smallscroll(class=nightmode_class)
         if embed
             // span.f11.full
             a.view_post(href="/p/#{_id}" class=post_header_class)
