--- a/client/client.jade
+++ b/client/client.jade
@@ -64,7 +64,7 @@ template(name='search_shortcut')
                                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.large.compact.button.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class} #{nightmode_class}")
+    .ui.compact.button.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class} #{nightmode_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
