--- a/client/view.jade
+++ b/client/view.jade
@@ -1,31 +1,26 @@
 template(name='post_view')
     with current_doc
-        .ui.stackable.grid
+        .ui.stackable.padded.grid
             .row 
                 .twelve.wide.column
-                    a.ui.large.icon.button(href="/")
-                        i.chevron.left.large.icon
-                        // i.large.home.icon
-                    .ui.center.aligned.inline.header(class=emotion_header_class) #{title}
+                    // a.ui.large.icon.button(href="/")
+                    //     i.chevron.left.large.icon
+                    //     // i.large.home.icon
+                    .ui.inline.header(class=emotion_header_class) #{title}
                     if url
                         div
                         a.ui.center.aligned.small.header(href=url target='_window') #{url}
                     .ui.five.item.stackable.menu(class=emotion_header_class)
-                        a.item.no_blink.set_main 
-                            i.content.icon
-                            |main
-                        a.item.no_blink.set_emotion
-                            i.line.chart.icon
-                            |stats
-                        a.item.no_blink.set_cleaned
-                            i.broom.icon
-                            |cleaned
-                        a.item.no_blink.set_tone 
-                            i.list.icon
-                            |tone
-                        a.item.no_blink.set_comments
-                            i.chat.icon
-                            |comments
+                        a.icon.item.no_blink.set_main 
+                            i.content.large.icon
+                        a.icon.item.no_blink.set_emotion
+                            i.line.large.chart.icon
+                        a.icon.item.no_blink.set_cleaned
+                            i.broom.large.icon
+                        a.icon.item.no_blink.set_tone 
+                            i.list.large.icon
+                        a.icon.item.no_blink.set_comments
+                            i.chat.large.icon
                     if skv_is 'post_view_mode' 'main'
                         .scrolling
                             if embed
