almost working ruser page and dl

--- a/client/card.jade
+++ b/client/card.jade
@@ -6,9 +6,9 @@ template(name='post_card')
                 |!{embed}
         else if is_image
             a.view_post(href="/p/#{_id}" class=post_header_class)
-                img.ui.fluid.image.toggle_view(src=data.url)
+                img.ui.fluid.image.zoomer.toggle_view(src=data.url)
         else if watson.metadata.image
-            img.ui.image.pointer.call_meta(src=watson.metadata.image)
+            img.ui.image.pointer.zoomer.call_meta(src=watson.metadata.image)
         else if data.is_reddit_media_domain
             a.view_post(href="/p/#{_id}" class=post_header_class)
                 img.ui.fluid.image.pointer(src=data.thumbnail)
