--- a/client/rusers.jade
+++ b/client/rusers.jade
@@ -1,4 +1,4 @@
-template(name='users')
+template(name='rusers')
     .ui.stackable.padded.grid
         .four.wide.column.scrolling
             .ui.inline.header 
