--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -1,11 +1,12 @@
 template(name='ruser')
+    +nav
     unless ruser_doc
         // .ui.header no user found
         .ui.hidden.divider
         .ui.hidden.divider
         .ui.hidden.divider
         .ui.center.aligned.basic.segment.search
-            i.massive.grey.yin.yang.loading.link.icon.get_user_info
+            i.massive.grey.download.link.icon.get_user_info
         // .ui.massive.fluid.button.f17.zoomer.pointer.search 
         //     i.download.icon
             // |download user info
@@ -13,14 +14,14 @@ template(name='ruser')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                    img.ui.small.image(src=data.snoovatar_img)
+                    img.ui.image(src=data.snoovatar_img)
                     .ui.large.inline.header.get_user_posts(class=post_header_class)
                         |!{username} 
                         small(title='reputation') {{ commafy karma }}
                         // strong(title="#{site} rank") ##{site_rank} 
                         strong(title='global rank') ##{global_rank}
                     with data
-                        .ui.small.list
+                        .ui.list
                             .item #{total_karma} total karma
                             .item #{comment_karma} comment karma
                             .item #{link_karma} link karma
@@ -33,129 +34,153 @@ template(name='ruser')
                             i.large.blue.shield.icon(title='is mod')
                         if has_verified_email
                             i.large.mail.icon(title='verified email')
-                    // i.info.icon.get_user_info
+                    i.info.icon.get_user_info
                     img.ui.rounded.inline.image.pointer.zoomer(src=profile_image)
-                    a.ui.compact.basic.icon.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
+                    a.ui.large.compact.basic.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
                         i.reddit.icon
                         i.external.icon
-                    if in_dev
-                        +print_this
-                    +ruser_top_emotions
-                    div
-                    .ui.small.inline.header 
-                        i.tag.icon
-                        |top tags
-                    each tags
-                        .ui.compact.basic.button.search_tag #{this}
-                .six.wide.column
-                    // if selected_ruser_post_tags
-                    //     each selected_ruser_post_tags
-                    //         +ruser_post_unselect_tag
-                    // .ui.icon.input
-                    //     i.search.icon
-                    //     input.search_ruser_postreddit(type='text')
-                
-                    .ui.inline.header 
-                        i.edit.icon
-                        |posts
-                    each selected_ruser_post_tags
-                        a.ui.label.unselect_ruser_post_tag #{this}
-                    each ruser_post_tag_results
-                        a.ui.basic.small.link.label.select_ruser_post_tag(title=count) #{name}
-                        |&nbsp;
-                    div 
-                    i.large.clock.icon
-                    each selected_ruser_post_time_tags
-                        a.ui.label #{this}
-                    each ruser_post_time_tag_results
-                        a.ui.basic.small.link.label.select_ruser_post_time_tag(title=count) #{name}
-                        |&nbsp;
-                    .scrolling
-                        each ruser_posts
-                            +ruser_post
-                .six.wide.column
-                    .ui.inline.header.get_user_comments
-                        i.chat.outline.icon
-                        |comments
-                    each ruser_comment_tag_results
-                        // .ui.label #{this}
-                        // +ruser_post_selector
-                        .ui.small.basic.label(title=count) #{name}
-                    .scrolling
-                        each rcomments
-                            +ruser_comment
-                            // .ui.divider
+                    +print_this
+                    +ruser_top_emotions            
+                .twelve.wide.column
+                    // a.ui.button(href="/user/#{username}")
+                    //     i.dashboard.icon
+                    //     |overview
+                    // a.ui.button(href="/user/#{username}/posts")
+                    //     i.edit.icon
+                    //     |posts
+                    // a.ui.button(href="/user/#{username}/comments")
+                    //     i.chat.outline.icon
+                    //     |comments
+                    // a.ui.button(href="/user/#{username}/upvoted")
+                    //     i.thumbs.up.outline.icon
+                    //     |upvoted
+                    // a.ui.button(href="/user/#{username}/downvoted")
+                    //     i.thumbs.down.outline.icon
+                    //     |downvoted
+                    // a.ui.button(href="/user/#{username}/hidden")
+                    //     i.eye.slash.icon
+                    //     |hidden
+                    // a.ui.button(href="/user/#{username}/saved")
+                    //     i.save.icon
+                    //     |saved
+                    // div
+                    if skv_is 'view_post_detail' true
+                        .ui.black.tertiary.large.button.toggle_post_detail.agg
+                            i.post.icon
+                            |#{user_posts.count} posts
+                    // if skv_is 'view_detail' true
+                    //     .ui.black.compact.icon.button.toggle_detail
+                    //         i.list.large.icon
+                    //         // |detail
+                    // else
+                    //     .ui.compact.basic.icon.button.toggle_detail
+                    //         i.minus.large.icon
+                    //         // |simple
+                    // div
+                    +yield
+         
+         
+template(name='ruser_overview')
+    .ui.stackable.grid
+        .eight.wide.column
+            // if selected_ruser_post_tags
+            //     each selected_ruser_post_tags
+            //         +ruser_post_unselect_tag
+            // .ui.icon.input
+            //     i.search.icon
+            //     input.search_ruser_postreddit(type='text')
+        
+            .ui.header 
+                i.edit.icon
+                |posts
+            each ruser_post_tag_results
+                // .ui.label #{this}
+                // +ruser_post_selector
+                .ui.label(title=count) #{name}
+            .medscroll
+                each ruser_posts
+                    +ruser_post
+        .eight.wide.column
+            .ui.header.get_user_comments
+                i.chat.outline.icon
+                |comments
+            each ruser_comment_tag_results
+                // .ui.label #{this}
+                // +ruser_post_selector
+                .ui.label(title=count) #{name}
+            .medscroll
+                each rcomments
+                    +ruser_comment
+                    .ui.divider
+        .eight.wide.column
+            .ui.grey.header 
+                i.thumbs.up.outline.icon
+                |upvoted
+            each top_upvoted
+                .ui.header #{title}
+        .eight.wide.column
+            .ui.grey.header 
+                i.thumbs.down.outline.icon
+                |downvoted
+            each top_downvoted
+                .ui.header #{title}
+        .eight.wide.column
+            .ui.header hidden
+            each top_hidden
+                .ui.header #{title}
+        .eight.wide.column
+            .ui.header saved
+            each top_saved
+                .ui.header #{title}
                     
                     
                     
 template(name='ruser_top_emotions')
-    .ui.header(title='rep is % x karma')
-        i.smile.grey.icon
-        |emotional averages
-    .ui.small.inline.header {{ to_percent avg_sent_score}}% sentiment
-    div
-    .ui.green.small.inline.header
-        | {{ to_percent avg_joy_score}}% joyful avg
-        | {{fixed0 rep_joy}} rep ##{global_joy_rep_rank} rank
-    div
-    .ui.blue.small.inline.header
-        | {{ to_percent avg_sadness_score}}% sad avg
+    .ui.basic.label {{ to_percent avg_sent_score}} sentiment
+    .ui.green.basic.large.label
+        | {{ to_percent avg_joy_score}}% joyful
+        | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
+
+    .ui.blue.basic.large.label
         |{{fixed0 rep_sadness}} sad rep
-        |##{global_sadness_rep_rank} rank
-    div
-    .ui.red.small.inline.header 
-        | {{ to_percent avg_anger_score}}% angry avg
-        | {{fixed0 rep_anger}} rep 
-        |##{global_anger_rep_rank} rank
-    div
-    .ui.orange.small.inline.header
-        | {{ to_percent avg_disgust_score}}% disgust avg
+        | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
+
+    .ui.red.basic.large.label 
+        | {{ to_percent avg_anger_score}}% angry
+        | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
+
+    .ui.orange.basic.large.label
         |{{fixed0 rep_disgust}} disgust rep
-        |##{global_disgust_rep_rank} rank
-    div
-    .ui.grey.small.inline.header
-        | {{ to_percent avg_fear_score}}% fear avg
+        | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
+
+    .ui.grey.basic.large.label
         |{{fixed0 rep_fear}} fear rep
-        |##{global_fear_rep_rank} rank
+        | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
 
                     
                                 
+                    
+                    
+template(name='ruser_posts')
+    .scrolling
+        each user_posts
+            +ruser_doc_item
+
 template(name='ruser_post')
-    .ui.seg
-        if embed
-            span.rounded.full
-                |!{embed}
-            div
-        else if data.is_reddit_media_domain
-            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.fluid.rounded.zoomer.image.toggle_view(src=data.url)
-        else if watson.metadata.image.length
-            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.rounded.inline.zoomer.image.toggle_view(src=watson.metadata.image)
-        else if data.thumbnail.length
-            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.rounded.inline.zoomer.image.zoomer(src=data.thumbnail)    
-
+    .ui.segment
         a.ui.small.inline.header(href="/r/#{subreddit}/post/#{_id}")
-            // |#{data.ups}:
-            |!{data.link_title} !{data.title}
+            |#{data.ups}
+            |#{data.link_title} #{data.title}
         a.ui.label(href="/r/#{subreddit}") #{subreddit}
-        each tags 
-            +flat_sub_ruser_tag_selector
+        each five_tags 
+            .ui.small.label #{this}
         +doc_emotion_small        
+        // +skve k='view_preview' v='preview' l=' ' i='caret down'
+        // if skv_is 'view_preview' 'preview'
         |#{data.body}
-        | #{data.ups}
-        i.thumbs.up.outline.grey.icon
-        | #{data.num_comments}
-        i.comment.outline.grey.icon
-        i.clock.icon
-        each time_tags 
-            .ui.small.basic.label #{this}
-
         .ui.label {{ufrom data.created}}
-        if in_dev
-            +print_this
-    // .ui.divider                 
+        +print_this
+                            
                             
 template(name='ruser_doc_item')
     .ui.item
@@ -170,11 +195,11 @@ template(name='ruser_doc_item')
                 img.ui.rounded.inline.small.image.zoomer(src=data.thumbnail)    
         a.ui.header.zoomer.say_title(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
             strong #{data.score}:
-            |!{data.link_title} !{data.title}
+            |!{data.link_title} #{data.title}
         .description
-            // if skv_is 'view_detail' true
-            each tags 
-                +flat_sub_ruser_tag_selector
+            if skv_is 'view_detail' true
+                each tags 
+                    .ui.tiny.basic.tertiary.button #{this}
             +doc_emotion_small    
             span(title="#{view_count} views")
                 i.grey.eye.icon
@@ -194,6 +219,14 @@ template(name='ruser_doc_item')
     
     
     
+template(name='ruser_comments')
+    a.ui.icon.button(href="www.reddit.com/user/#{ruser_doc.username}/comments" target='_window')
+        i.external.icon
+    .scrolling
+        each user_comments
+            +ruser_comment
+                            
+                            
 template(name='ruser_comment')                    
     .call_watson_comment
         .ui.small.inline.header {{data.score}}
@@ -202,13 +235,10 @@ template(name='ruser_comment')
             +doc_emotion_small
         .pointer.say(class=post_header_class)
             |{{#markdown}} {{data.body}} {{/markdown}}
-        each tags 
-            +flat_sub_ruser_tag_selector
-            // .ui.tiny.basic.label #/{this}
-        a.author.say(href="/r/#{data.subreddit}") #{data.subreddit}
-        if in_dev
-            +print_this
-        i.clock.icon
-        each time_tags 
-            .ui.small.label #{this}
-        // .actions
+        .actions
+            each tags 
+                +flat_sub_tag_selector
+                // .ui.tiny.basic.label #/{this}
+            a.author.say(href="/r/#{data.subreddit}") #{data.subreddit}
+            if in_dev
+                +print_this
