--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -85,7 +85,7 @@ template(name='subreddit')
                 a.ui.basic.large.disabled.button(href="/s/#{display_name}/users")
                     i.large.user.outline.icon
                     |users
-                +alpha
+                // +alpha
                 .ui.inline.small.header domains
                 
                 each subreddit_domain_tags
