technically working rusers and ruser

--- a/client/client.jade
+++ b/client/client.jade
@@ -42,7 +42,7 @@ template(name='nav')
             i.search.large.icon
         a.icon.item(href="/subs")
             i.fire.large.icon
-        a.icon.item(href="/users")
+        a.icon.item(href="/rusers")
             i.users.large.icon
 
 template(name='not_found')
