--- a/client/view.jade
+++ b/client/view.jade
@@ -85,6 +85,8 @@ template(name='post_view')
 
                     // else if has_thumbnail
                     //     img.ui.fluid.rounded.image.pointer.call_thumbnail(src=data.thumbnail)
+                    i.large.thumbs.up.icon
+                    | #{points} points
                     i.large.eye.icon
                     | #{views} views
                     if comment_count
