add active router

--- a/client/client.jade
+++ b/client/client.jade
@@ -38,11 +38,11 @@ template(name='layout')
             
 template(name='nav')            
     .ui.attached.fluid.three.item.inverted.menu
-        a.icon.item(href="/")
+        a.icon.item(href="/" class="{{isActiveRoute 'home'}}")
             i.search.large.icon
-        a.icon.item(href="/subs")
+        a.icon.item(href="/subs" class="{{isActiveRoute 'subs'}}")
             i.fire.large.icon
-        a.icon.item(href="/rusers")
+        a.icon.item(href="/rusers" class="{{isActiveRoute 'rusers'}}")
             i.users.large.icon
 
 template(name='not_found')
