fix subreddit helper, better subs display, add blocks and blocks.coffee, convert selected_ to picked_

--- a/client/client.jade
+++ b/client/client.jade
@@ -37,7 +37,7 @@ template(name='layout')
             
             
 template(name='nav')            
-    .ui.attached.fluid.three.item.inverted.menu
+    .ui.attached.fluid.three.item.inverted.menu.bottom_rounded
         a.icon.item(href="/" class="{{isActiveRoute 'home'}}")
             i.search.large.icon
         a.icon.item(href="/subs" class="{{isActiveRoute 'subs'}}")
