--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -71,8 +71,8 @@ template(name='ruser')
 template(name='ruser_overview')
     .ui.stackable.grid
         .eight.wide.column
-            // if selected_ruser_post_tags
-            //     each selected_ruser_post_tags
+            // if picked_ruser_post_tags
+            //     each picked_ruser_post_tags
             //         +ruser_post_unselect_tag
             // .ui.icon.input
             //     i.search.icon
