--- a/client/style.css
+++ b/client/style.css
@@ -58,11 +58,12 @@ body {
 /*.ui.attached.menu:not(.tabular) {*/
 /*  border:0px !important;*/
 /*}*/
-/*.seg {*/
-/*  background: rgba(250,250,250,.85);*/
+.seg {
+  background: rgba(250,250,250,.75);
   /*opacity: .5;*/
-/*  padding:15px;*/
-/*}*/
+  /*padding:15px;*/
+  border-radius:10px !important;
+}
 /*.pulsing {*/
     /*height: 250px; */
     /*width: 250px; */
@@ -248,10 +249,10 @@ body {
   /*transition: height .25s linear;*/
 /*}*/
 
-/*.bottom_rounded {*/
-/*  border-bottom-right-radius: 15px !important;*/
-/*  border-bottom-left-radius: 15px !important;*/
-/*}*/
+.bottom_rounded {
+  border-bottom-right-radius: 15px !important;
+  border-bottom-left-radius: 15px !important;
+}
 /*.top_rounded {*/
 /*  border-top-right-radius: 15px !important;*/
 /*  border-top-left-radius: 15px !important;*/
@@ -325,7 +326,9 @@ body {
 /*    top: 290px;*/
 /*  }*/
 /*}*/
-
+.whited {
+  opacity:50% !important;
+}
 /*.centered {*/
 /*    text-align: center !important;*/
 /*}*/
@@ -365,9 +368,9 @@ body {
 /*}*/
 
 
-/*.rounded {*/
-  /*padding: 7px !important; */
-/*}*/
+.rounded {
+  padding: 7px !important; 
+}
 
 /*.card {*/
     /* background: black !important; */
