much better subs, filter result json fields

--- a/client/client.jade
+++ b/client/client.jade
@@ -38,10 +38,10 @@ template(name='layout')
             
 template(name='nav')            
     .ui.attached.fluid.three.item.inverted.menu.bottom_rounded
-        a.icon.item(href="/" class="{{isActiveRoute 'home'}}")
-            i.search.large.icon
         a.icon.item(href="/subs" class="{{isActiveRoute 'subs'}}")
             i.fire.large.icon
+        a.icon.item(href="/" class="{{isActiveRoute 'home'}}")
+            i.yin.yang.large.icon
         a.icon.item(href="/rusers" class="{{isActiveRoute 'rusers'}}")
             i.users.large.icon
 
