--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -7,7 +7,7 @@ template(name='subreddit')
             .eleven.wide.column.seg
                 // img(src=data.banner_img)
                 // img(src=banner_background_image)
-                a.ui.basic.compact.icon.button(href="/reddit")
+                a.ui.basic.compact.icon.button(href="/")
                     i.large.chevron.left.grey.icon
                     // img.ui.mini.inline.image(src=icon_img)
                 img.get_info.shadowed.ui.inline.image(src=logo_url )
