--- a/client/subs.jade
+++ b/client/subs.jade
@@ -23,7 +23,7 @@ template(name='subs')
             .twelve.wide.column
                 .ui.icon.input
                     i.search.icon
-                    input.search_subs(type='text')
+                    input.search_subreddits(type='text')
                 +skve k='view_sub_detail' v=true l='detail' i='chevron up'
                 +skve k='view_sub_detail' v=false l='simple' i='chevron down'
                 +skve k='sort_subs' v='subscribers' l='subscribers' i='users'
