--- a/client/subs.jade
+++ b/client/subs.jade
@@ -4,7 +4,7 @@ template(name='subs')
             .four.wide.column
                 .ui.inline.header #{sub_count}
                 .ui.inline.header
-                    i.circular.fire.big.icon
+                    i.fire.big.icon
                     |groups
                 // .ui.inline.header.search_subs
                 //     |#{subreddit_docs.count} subs
@@ -18,7 +18,7 @@ template(name='subs')
                 .medscroll
                     each subreddit_tags
                         // .ui.label #{this}
-                        a.zoomer.ui.large.circular.compact.link.label.pick_sub_tag(title=count) #{name}
+                        a.zoomer.ui.compact.link.label.pick_sub_tag(title=count) #{name}
             .twelve.wide.column
                 .ui.icon.input
                     i.search.icon
@@ -45,15 +45,15 @@ template(name='subs')
 template(name='subreddit_doc')
     .item(style="background-image:url(#{data.banner_img});, background-size:cover; background-repeat: no-repeat; min-width: 100%; ")
         // a.ui.tiny.image.goto_sub(href="/r/#{data.display_name}")
-        a.ui.tiny.image.goto_sub(href="/r/#{data.display_name}")
+        a.ui.tiny.image.goto_sub(href="https://www.reddit.com/r/#{data.display_name}" target="_window")
             img.ui.rounded.zoomer.tiny.image(src=data.icon_img)
         .content.seg
-            a.ui.header.goto_sub(href="/r/#{data.display_name}")
+            a.ui.header.goto_sub(href="https://www.reddit.com/r/#{data.display_name}" target="_window")
                 img.ui.rounded.zoomer.image(src=data.header_img)
                 | !{data.title} 
                 small !{data.display_name}
-            a.ui.small.grey.header.goto_sub(href="/r/#{data.display_name}")
-                | !{data.header_title}
+            // a.ui.small.grey.header.goto_sub(href="/r/#{data.display_name}" target="_window")
+            //     | !{data.header_title}
             // if skv_is 'view_sub_detail' true
             // span.description !{data.public_description_html}
             span.descriptionl.goto_sub !{data.public_description}
@@ -67,11 +67,11 @@ template(name='subreddit_doc')
             // .ui.label(title='subscribers')
             //     i.edit.icon
             //     |#{data.subscribers}
-            each tags
-                .ui.basic.small.label.goto_sub #{this}
-            if in_dev
-                +print_this
-                +remove_button
+            // if in_dev
+            //     each tags
+            //         .ui.basic.small.label.goto_sub #{this}
+            //     +print_this
+            //     +remove_button
 
 
 template(name='subs_tag_selector')
